change card entrance animations to involve less... motion. - Avoids Chrome overflow bug while animating - Looks better

--- a/src/styles/custom.scss
+++ b/src/styles/custom.scss
@@ -14,7 +14,6 @@ $display4-weight: 500;
 
 // Components
 html {
-  overflow-x: hidden;
   scroll-behavior: smooth;
 }
 
